Java 15 was nice, but it doesn't play nice with some drivers
Long story short: Java 14 is our requirement. Mostly because Java 15
prevents a lot of various drivers from working. Until more tools are
updated, the current flow of working in development will remain in 14.

Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>