@@ -21,10 +21,8 @@
     <modules>
         <module>utils</module>
         <module>commit-api</module>
-        <module>commit-event</module>
         <module>commit-impl</module>
         <module>changelog-api</module>
-        <module>changelog-event</module>
         <module>changelog-impl</module>
         <module>artifact-api</module>
         <module>artifact-event</module>
@@ -33,7 +31,6 @@
         <module>graphql-server</module>
         <module>webhooks</module>
         <module>integration-tests</module>
-        <module>webooks-event</module>
         <module>webooks-api</module>
     </modules>
 
@@ -62,9 +59,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>15</release>
+                    <release>14</release>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
                         <arg>-parameters</arg>
                     </compilerArgs>
                 </configuration>
@@ -120,28 +116,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>io.openapitools.swagger</groupId>
-                <artifactId>swagger-maven-plugin</artifactId>
-                <version>2.1.5</version>
-                <configuration>
-                    <outputFileName>openapi</outputFileName>
-                    <outputPath>${project.build.directory}/generatedtest</outputPath>
-                    <outputFormat>JSONANDYAML</outputFormat>
-                    <resourcePackages>
-                        <package>test.petstore</package>
-                    </resourcePackages>
-                    <prettyPrint>true</prettyPrint>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>resolve</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
 
@@ -180,6 +154,21 @@
                 <version>${pac4j.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.taymyr.lagom</groupId>
+                <artifactId>lagom-openapi-java-api_${scala.binary.version}</artifactId>
+                <version>${lagom.openapi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.taymyr.lagom</groupId>
+                <artifactId>lagom-openapi-java-impl_${scala.binary.version}</artifactId>
+                <version>${lagom.openapi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -187,6 +176,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <scala.binary.version>2.13</scala.binary.version>
+        <swagger.version>2.1.1</swagger.version>
 
         <lagom.openapi.version>1.2.2</lagom.openapi.version>
         <lagom.version>1.6.4</lagom.version>
